attest-rs/output_utf8.txt
cargo :     Checking 
attest-rs v0.1.0 (C:\U
sers\quint\Desktop\pro
vnai\attest\attest-rs)
At line:1 char:1
+ cargo check > 
output.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng at...test\atte    
st-rs):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
error[E0433]: failed 
to resolve: use of 
undeclared type 
`Ipv4Addr`
  --> src\runtime\netw
ork.rs:48:39
   |
48 | ...              
     local_ip: Ipv4Add
r::from(u32::from_be(r
ow.dwLocalAddr)).to_st
ring(),
   |                  
               
^^^^^^^^ use of 
undeclared type 
`Ipv4Addr`
   |
help: consider 
importing this struct
   |
17 +     use 
std::net::Ipv4Addr;
   |

error[E0433]: failed 
to resolve: use of 
undeclared type 
`Ipv4Addr`
  --> src\runtime\netw
ork.rs:50:40
   |
50 | ...              
     remote_ip: Ipv4Ad
dr::from(u32::from_be(
row.dwRemoteAddr)).to_
string(),
   |                  
                
^^^^^^^^ use of 
undeclared type 
`Ipv4Addr`
   |
help: consider 
importing this struct
   |
17 +     use 
std::net::Ipv4Addr;
   |

error[E0433]: failed 
to resolve: use of 
undeclared type 
`Ipv6Addr`
  --> src\runtime\netw
ork.rs:61:39
   |
61 | ...              
     local_ip: Ipv6Add
r::from(row.ucLocalAdd
r).to_string(),
   |                  
               
^^^^^^^^ use of 
undeclared type 
`Ipv6Addr`
   |
help: consider 
importing this struct
   |
17 +     use 
std::net::Ipv6Addr;
   |

error[E0433]: failed 
to resolve: use of 
undeclared type 
`Ipv6Addr`
  --> src\runtime\netw
ork.rs:63:40
   |
63 | ...              
     remote_ip: Ipv6Ad
dr::from(row.ucRemoteA
ddr).to_string(),
   |                  
                
^^^^^^^^ use of 
undeclared type 
`Ipv6Addr`
   |
help: consider 
importing this struct
   |
17 +     use 
std::net::Ipv6Addr;
   |

warning: unused 
import: `anyhow`
 --> src\runtime\netwo
rk.rs:2:14
  |
2 | use 
anyhow::{anyhow, 
Result};
  |              
^^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

For more information 
about this error, try 
`rustc --explain 
E0433`.
warning: `attest-rs` 
(lib) generated 1 
warning
error: could not 
compile `attest-rs` 
(lib) due to 4 
previous errors; 1 
warning emitted
